--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "engines": {
     "node": ">=20.0.0"
   },
+  "packageManager": "yarn@4.4.1",
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "typescript": "^5.6.2"
