--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "./",
-    "resolveJsonModule": true, //Allow import .json files
+    "resolveJsonModule": true
   },
   "include": [
     "src"
