--- a/package.json
+++ b/package.json
@@ -23,11 +23,18 @@
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/fs-extra": "^11",
+    "@types/jest": "^29.5.13",
+    "@types/jsonpath": "^0.2.4",
+    "@types/node": "^22.5.5",
+    "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "fs-extra": "^11.2.0",
+    "jsonpath": "^1.1.1",
     "path": "^0.12.7"
   }
 }
