Refactor createWorkspace to just copy contents of static/
this is in anticipation of needing to handle additional assets

--- a/static/Contents/Info.plist
+++ b/static/Contents/Info.plist
@@ -18,9 +18,12 @@
         <true/>
 
         <key>dashIndexFilePath</key>
-        <string>index.html</string>
+        <string>aws-template-resource-type-ref.html</string>
 
         <key>DashDocSetFallbackURL</key>
         <string>http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide</string>
+
+        <key>DashDocSetFamily</key>
+        <string>dashtoc</string>
     </dict>
 </plist>
