--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@types/sqlite3": "^3.1.11",
     "fs-extra": "^11.2.0",
     "jsonpath": "^1.1.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
