--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@types/node": "^22.5.5",
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
+    "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "@types/sqlite3": "^3.1.11",
+    "cheerio": "^1.0.0",
     "fs-extra": "^11.2.0",
     "jsonpath": "^1.1.1",
     "path": "^0.12.7",
