deploy job yarn

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -64,6 +64,10 @@ jobs:
         with:
           node-version: '22'
 
+      - name: Install Yarn via corepack
+        shell: bash
+        run: corepack enable
+
       - name: Package
         shell: bash
         run: yarn run package
