get test coverage

--- a/jest.config.json
+++ b/jest.config.json
@@ -3,5 +3,6 @@
   "transform": {
     "^.+.tsx?$": ["ts-jest",{}]
   },
-  "modulePathIgnorePatterns": ["<rootDir>/dist/"]
+  "modulePathIgnorePatterns": ["<rootDir>/dist/"],
+  "collectCoverage": true
 }
