Add utilities to fetch entire doc site and serve contents up locally. Also give ability to override site URL so we can develop against our local copy.
When we're developing we have a tendency to trigger rate limiting so this avoids that

--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "clean": "rm -rf dist",
     "build": "yarn run clean && tsc",
     "generate": "node dist/src/index.js",
+    "generate::local": "DOC_ROOT=http://localhost:3000 yarn run generate",
     "test": "jest",
-    "package": "cd docbuild && tar zcvf aws-cloudformation.docset.tgz aws-cloudformation.docset"
+    "package": "cd docbuild && tar zcvf aws-cloudformation.docset.tgz aws-cloudformation.docset",
+    "site::fetch": "node dist/src/util/fetchSite.js",
+    "site::serve": "node dist/src/util/serveSite.js"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
