--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
+    "@types/express": "^4",
     "@types/fs-extra": "^11",
     "@types/jest": "^29.5.13",
     "@types/jsonpath": "^0.2.4",
     "@types/node": "^22.5.5",
     "@types/sqlite3": "^3.1.11",
+    "express": "^4.21.1",
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.3.3",
