--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "email": "tom@serverlessops.io"
   },
   "license": "BSD-2-Clause",
+  "type": "module",
+  "exports": "./index.js",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -38,7 +40,7 @@
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
