--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "cheerio": "^1.0.0",
     "fs-extra": "^11.2.0",
+    "got": "^14.4.4",
     "highlight.js": "^11.10.0",
     "jsonpath": "^1.1.1",
     "path": "^0.12.7",
